--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
                 %li
                   = link_to "Workouts", workouts_path
                 %li
-                  = link_to "Add workout", new_workout_path
+                  = link_to "Excercises", excercises_path
             %p.navbar-text.pull-right
               - if user_signed_in?
                 = link_to current_user.email, edit_user_registration_path, class: 'navbar-link'
