--- a/app/views/excercises/_form.html.haml
+++ b/app/views/excercises/_form.html.haml
@@ -1,4 +1,5 @@
 = simple_form_for(excercise, html: { class: "form-horizontal workout_form"}) do |f|
   = f.input :name, label: "Title", input_html: { class: "form-control" }
   = f.input :description, label: "Description", as: :string, input_html: { class: "form-control" }
+  = f.association :category, collection: Category.all, prompt: "Choose a category"
   = f.submit
