--- a/app/views/excercises/show.html.haml
+++ b/app/views/excercises/show.html.haml
@@ -1,5 +1,6 @@
 #excercise
   = @excercise.name
   = @excercise.description
+  = @excercise.category ? @excercise.category.name : "no category"
   .pull-right
     = link_to "Edit", edit_excercise_path(@excercise)
