--- a/app/views/workout_sets/_form.html.haml
+++ b/app/views/workout_sets/_form.html.haml
@@ -1,5 +1,5 @@
 = simple_form_for([workout, workout.workout_sets.build], html: { class: "form-horizontal set_form"}) do |f|
-  = f.association :excercise, collection: Excercise.all, prompt: "Choose a excercise", :selected => @has_sets ? @last_set.excercise.id : 0
-  = f.input :weight, label: "Weight", input_html: { class: "form-control", value: f.object.weight || @has_sets ? @last_set.weight : 0 }
-  = f.input :reps, label: "Reps", input_html: { class: "form-control", value: f.object.reps || @has_sets ? @last_set.reps : 0 }
-  = f.submit
+  = f.association :excercise, label: "Упражнение", collection: Excercise.all, prompt: "Выберите упражнение", :selected => @has_sets ? @last_set.excercise.id : 0
+  = f.input :weight, label: "Вес", input_html: { class: "form-control", value: f.object.weight || @has_sets ? @last_set.weight : 0 }
+  = f.input :reps, label: "Повторы", input_html: { class: "form-control", value: f.object.reps || @has_sets ? @last_set.reps : 0 }
+  = f.submit "Добавить", class: "btn btn-primary"
