--- a/app/views/workouts/index.html.haml
+++ b/app/views/workouts/index.html.haml
@@ -1,5 +1,5 @@
 .pull-right
-  = link_to "Add workout", new_workout_path
+  = link_to "Добавить тренировку", new_workout_path
 %br/
 #index_workouts
   - @workouts.each do |workout|
