--- a/app/views/excercises/new.html.haml
+++ b/app/views/excercises/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New excercise
+%h1 Новое упражнение
 
 = render 'form', excercise: @excercise
 
-= link_to "Cancel", excercises_path
+= link_to "Отмена", excercises_path
