--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,9 +27,9 @@
             %ul.nav.navbar-nav
               - if user_signed_in?
                 %li
-                  = link_to "Workouts", workouts_path
+                  = link_to "Тренировки", workouts_path
                 %li
-                  = link_to "Excercises", excercises_path
+                  = link_to "Упражнения", excercises_path
             %p.navbar-text.pull-right
               - if user_signed_in?
                 = link_to current_user.email, edit_user_registration_path, class: 'navbar-link'
