--- a/app/views/workouts/_form.html.haml
+++ b/app/views/workouts/_form.html.haml
@@ -1,4 +1,4 @@
 = simple_form_for(workout, html: { class: "form-horizontal workout_form"}) do |f|
-  = f.input :title, label: "Title", input_html: { class: "form-control" }
-  = f.input :date, label: "Date", as: :string, input_html: { class: "form-control", value: f.object.date || DateTime.now.strftime("%d.%m.%Y") }
-  = f.submit
+  = f.input :title, label: "Название", input_html: { class: "form-control" }
+  = f.input :date, label: "Дата", as: :string, input_html: { class: "form-control", value: f.object.date || DateTime.now.strftime("%d.%m.%Y") }
+  = f.submit "Добавить", class: "btn btn-primary"
