--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %title Bodylog
     = stylesheet_link_tag :application, :media => 'all'
+    = javascript_include_tag "//www.google.com/jsapi", "chartkick"
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
     = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
